<resources>
    <string name="app_name">My Adapters</string>
    <string name="action_settings"> Settings </string>

    <string name="title">My Adapters project</string>

    <string name="title_activity">My list view</string>
    <string name="book_name">Book name</string>

    <string name="title_activity2">My handmade list view</string>

    <string name="title_activity3">My favourite writers</string>

    <string name="writer_name">Writer name</string>

    <!-- Menu options -->
    <string name="home">Home</string>
    <string name="simplest_activity">The simplest adapter</string>
    <string name="handmade_activity">Handmade adapter</string>
    <string name="simple_adapter_activity">Using Simple Adapter</string>
    <string name="title_activity_menjars_adapter">MenjarsAdapterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menjars_adapter_activity">Menjars adapter</string>
    <string name="menjar_nom">Nom</string>
    <string name="menjar_preu">Preu:</string>
    <string name="menjar_descripcio">Descripcio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>