<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <ImageView
        android:id="@+id/menjar_avatar"
        android:layout_width="100dp"
        android:layout_height="115dp" />

    <TextView
        android:id="@+id/menjar_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:text="@string/menjar_nom"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="24sp"
        tools:text="Nom" />

    <TextView
        android:id="@+id/menjar_descripcio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menjar_nom"
        android:layout_alignLeft="@+id/menjar_avatar"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="5dp"
        android:text="@string/menjar_descripcio"
        android:textSize="18sp"
        tools:text="Descripcio" />

    <TextView
        android:id="@+id/menjar_preu"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/menjar_descripcio"
        android:layout_alignLeft="@+id/menjar_avatar"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="8dp"
        android:text="@string/menjar_preu"
        android:textSize="18sp"
        tools:text="Preu" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="320dp"
        android:focusable="false"
        android:layout_marginTop="3dp" />

</RelativeLayout>
